# AI-tier-guardian

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  config.example.json  demo.html  pyproject.toml  run_batch.py  test_results.json
docs/: first_plan
tests/: __init__.py  test_arbitration.py  test_cache.py  test_llm_client.py  test_models.py
tier_guardian/: __init__.py  arbitration.py  cache.py  case_store.py  cli.py  config.py  llm_client.py  models.py  orchestrator.py  prompts.py
tier_guardian/nodes/: __init__.py  context_judge.py  evidence_summarizer.py  intent_probe.py  surface_scanner.py
