[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tier-guardian"
version = "0.2.0"
description = "三庭二审内容审核引擎 - AI-powered content moderation engine"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "redis>=5.0",
    "cachetools>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tier_guardian*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
